# MPCC

C++/MPC/: mpc.cpp  mpc.h
C++/Params/: track.cpp  track.h
ROS/: README.md
ROS/mpcc/: CMakeLists.txt  package.xml
ROS/mpcc/config/: config.json  config.yaml  mpcc.yaml  simulator.yaml
ROS/mpcc/include/MPCC/: MPCC.h
ROS/mpcc/include/Simple_Sim/: SimpleSim.h
ROS/mpcc/launch/: mpcc.launch  rviz.launch  simulator.launch
ROS/mpcc/launch/rviz/: RVIZ_config.rviz
ROS/mpcc/src/: MPCC.cpp  MPCCNode.cpp  SimpleSim.cpp  SimpleSimNode.cpp
ROS/mpcc_msgs/: CMakeLists.txt  package.xml
ROS/mpcc_msgs/msg/: Input.msg  State.msg  Trajectory.msg
