<?xml version="1.0"?>
<package>
  <!-- Package meta info -->
  <name>mpcc</name>
  <version>0.0.0</version>
  <description>
   ROS nodes for MPCC implementation
  </description>

  <!-- Authors -->
  <license>Apache License 2.0</license>
  <author email="m.schratter@gmx.at">Markus Schratter</author>
  <maintainer email="m.schratter@gmx.at">Markus Schratter</maintainer>

  <!-- Build tool setup -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!-- Runtime dependencies -->
  <run_depend>roscpp</run_depend>

</package>
