<?xml version="1.0"?>
<package format="2">.
  <name>mpcc_msgs</name>
  <version>0.0.1</version>
  <description>CAN related message types.</description>

  <maintainer email="mschratter@github.com">Markus Schratter</maintainer>
  <author email="mschratter@github.com">Markus Schratter</author>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
